# ikafssn

./: .gitignore  CLAUDE.md  CMakeLists.txt  DEPENDENCIES  INSTALL  README.md  devplan_ikafssn.md  improveindex.md
.github/workflows/: release.yml
doc/: ikafssn.en.md  ikafssn.ja.md
doc/systemd/: README.md  ikafssnhttpd@.service  ikafssnserver@.service
patches/: README.md  ncbi-cxx-toolkit-seqdb-madvise-random.patch  parasail-degmatch-cigar-score.patch
src/: CMakeLists.txt
src/core/: ambiguity_parser.hpp  config.hpp  kmer_encoding.hpp  packed_kmer_scanner.hpp  spaced_seed.hpp  types.hpp  varint.hpp  version.hpp.in
src/ikafssnclient/: checkpoint.cpp  checkpoint.hpp  http_client.cpp  http_client.hpp  main.cpp  socket_client.cpp  socket_client.hpp
src/ikafssnhttpd/: backend_client.cpp  backend_client.hpp  backend_manager.cpp  backend_manager.hpp  http_controller.cpp  http_controller.hpp  main.cpp
src/ikafssnindex/: main.cpp
src/ikafssninfo/: main.cpp
src/ikafssnretrieve/: efetch_retriever.cpp  efetch_retriever.hpp  local_retriever.cpp  local_retriever.hpp  main.cpp
src/ikafssnsearch/: main.cpp
src/ikafssnserver/: connection_handler.cpp  connection_handler.hpp  main.cpp  request_processor.cpp  request_processor.hpp  server.cpp  server.hpp
src/index/: index_builder.cpp  index_builder.hpp  index_filter.cpp  index_filter.hpp  khx_format.hpp  khx_reader.cpp  khx_reader.hpp  khx_writer.cpp  khx_writer.hpp  kix_format.hpp  kix_reader.cpp  kix_reader.hpp  kix_writer.cpp  kix_writer.hpp  kpx_format.hpp  kpx_reader.cpp  kpx_reader.hpp  kpx_writer.cpp  kpx_writer.hpp  ksx_format.hpp  ksx_reader.cpp  ksx_reader.hpp  ksx_writer.cpp  ksx_writer.hpp
src/io/: blastdb_reader.cpp  blastdb_reader.hpp  fasta_reader.cpp  fasta_reader.hpp  kvx_reader.cpp  kvx_reader.hpp  mmap_file.cpp  mmap_file.hpp  primer_query.cpp  primer_query.hpp  result_reader.cpp  result_reader.hpp  result_writer.cpp  result_writer.hpp  sam_writer.cpp  sam_writer.hpp  seqidlist_reader.cpp  seqidlist_reader.hpp  volume_discovery.cpp  volume_discovery.hpp
src/protocol/: frame.cpp  frame.hpp  info_format.cpp  info_format.hpp  messages.hpp  serializer.cpp  serializer.hpp
src/search/: diagonal_filter.cpp  diagonal_filter.hpp  oid_filter.cpp  oid_filter.hpp  posting_decoder.hpp  query_preprocessor.cpp  query_preprocessor.hpp  seq_id_decoder.hpp  stage1_filter.cpp  stage1_filter.hpp  stage2_chaining.cpp  stage2_chaining.hpp  stage3_alignment.cpp  stage3_alignment.hpp  volume_searcher.cpp  volume_searcher.hpp
src/util/: cli_parser.cpp  cli_parser.hpp  common_init.hpp  context_parser.hpp  logger.hpp  progress.hpp  size_parser.cpp  size_parser.hpp  socket_utils.cpp  socket_utils.hpp
test/: CMakeLists.txt  ssu_test_fixture.hpp  test_builder.cpp  test_chaining.cpp  test_checkpoint.cpp  test_diagonal_filter.cpp  test_efetch_retriever.cpp  test_httpd.cpp  test_httpd_client.cpp  test_ikafssninfo.cpp  test_khx_io.cpp  test_kix_io.cpp  test_kmer_encoding.cpp  test_kpx_io.cpp  test_ksx_io.cpp  test_multivolume.cpp  test_oid_filter.cpp  test_packed_kmer_scanner.cpp  test_protocol.cpp  test_result_reader.cpp  test_retrieve_pipeline.cpp  test_retrieve_ssu.cpp  test_sam_writer.cpp  test_search_integration.cpp  test_seqidlist_reader.cpp  test_server_client.cpp  test_spaced_seed.cpp  test_stage1.cpp  test_stage3_alignment.cpp  test_stage3_integration.cpp  test_util.hpp  test_varint.cpp
test/scripts/: create_test_blastdb.sh  setup_ssu_testdata.sh
test/testdata/: ambig.fasta  ambigdb.ndb  ambigdb.nhr  ambigdb.nin  ambigdb.nos  ambigdb.nsq  multivol_a.fasta  multivol_a.ndb  multivol_a.nhr  multivol_a.nin  multivol_a.nos  multivol_a.nsq  multivol_b.fasta  multivol_b.ndb  multivol_b.nhr  multivol_b.nin  multivol_b.nos  multivol_b.nsq  queries.fasta  seqidlist.txt  small.fasta  testdb.ndb  testdb.nhr  testdb.nin  testdb.nos  testdb.nsq
